systemd: add "BindsTo=dbus.service" to NetworkManager.service
Add "BindsTo=dbus.service" to NetworkManager.service so that when the
D-Bus service gets restarted, NM is also restarted instead of staying
stopped.

https://bugzilla.redhat.com/show_bug.cgi?id=2161915
https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/merge_requests/1605

--- a/data/NetworkManager.service.in
+++ b/data/NetworkManager.service.in
@@ -4,6 +4,7 @@ Documentation=man:NetworkManager(8)
 Wants=network.target
 After=network-pre.target dbus.service
 Before=network.target @DISTRO_NETWORK_SERVICE@
+BindsTo=dbus.service
 
 [Service]
 Type=dbus
