gitlab-ci: add CentOS Stream 8+9 containers

--- a/.gitlab-ci/config.yml
+++ b/.gitlab-ci/config.yml
@@ -64,6 +64,8 @@ distributions:
       - '7.9.2009'
       - '8.1.1911'
       - '8.3.2011'
+      - 'stream8'
+      - 'stream9'
   - name: centos
     tier: 3
     versions:
