--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,11 +56,11 @@ variables:
   #
   # This is done by running `ci-fairy generate-template` and possibly bumping
   # ".default_tag".
-  ALPINE_TAG:  'tag-8399f83819ed'
-  CENTOS_TAG:  'tag-7405a4b74c04'
-  DEBIAN_TAG:  'tag-f97319c5ab59'
-  FEDORA_TAG:  'tag-7405a4b74c04'
-  UBUNTU_TAG:  'tag-f97319c5ab59'
+  ALPINE_TAG:  'tag-17df8b214d94'
+  CENTOS_TAG:  'tag-39222307a199'
+  DEBIAN_TAG:  'tag-7daf9b9bc6e4'
+  FEDORA_TAG:  'tag-39222307a199'
+  UBUNTU_TAG:  'tag-7daf9b9bc6e4'
 
   ALPINE_EXEC: 'bash .gitlab-ci/alpine-install.sh'
   CENTOS_EXEC: 'bash .gitlab-ci/fedora-install.sh'
@@ -355,6 +355,28 @@ tier2:centos:8.3.2011@prep:
   variables:
     GIT_STRATEGY: none
     FDO_DISTRIBUTION_VERSION: '8.3.2011'
+    FDO_DISTRIBUTION_TAG: $CENTOS_TAG
+    FDO_DISTRIBUTION_EXEC: $CENTOS_EXEC
+  when: manual
+
+tier2:centos:stream8@prep:
+  extends:
+    - .fdo.container-build@centos
+  stage: prep
+  variables:
+    GIT_STRATEGY: none
+    FDO_DISTRIBUTION_VERSION: 'stream8'
+    FDO_DISTRIBUTION_TAG: $CENTOS_TAG
+    FDO_DISTRIBUTION_EXEC: $CENTOS_EXEC
+  when: manual
+
+tier2:centos:stream9@prep:
+  extends:
+    - .fdo.container-build@centos
+  stage: prep
+  variables:
+    GIT_STRATEGY: none
+    FDO_DISTRIBUTION_VERSION: 'stream9'
     FDO_DISTRIBUTION_TAG: $CENTOS_TAG
     FDO_DISTRIBUTION_EXEC: $CENTOS_EXEC
   when: manual
@@ -728,6 +750,30 @@ t_centos:8.3.2011:
     FDO_DISTRIBUTION_TAG: $CENTOS_TAG
   needs:
     - "tier2:centos:8.3.2011@prep"
+
+t_centos:stream8:
+  extends:
+    - .build@template
+    - .fdo.distribution-image@centos
+    - .nm_artifacts_debug
+  stage: tier2
+  variables:
+    FDO_DISTRIBUTION_VERSION: 'stream8'
+    FDO_DISTRIBUTION_TAG: $CENTOS_TAG
+  needs:
+    - "tier2:centos:stream8@prep"
+
+t_centos:stream9:
+  extends:
+    - .build@template
+    - .fdo.distribution-image@centos
+    - .nm_artifacts_debug
+  stage: tier2
+  variables:
+    FDO_DISTRIBUTION_VERSION: 'stream9'
+    FDO_DISTRIBUTION_TAG: $CENTOS_TAG
+  needs:
+    - "tier2:centos:stream9@prep"
 
 t_centos:7.6.1810:
   extends:
